--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="projectDetails.html" target="my file">Project</a>&nbsp;&nbsp;&nbsp;&nbsp;            
             <a href="mHobbies.html" target="my file">Hobbies</a>&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="personal.html" target="my file">Personal</a>&nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="other.html" target="my file">Other</a>
+            <a href="contactUs.html" target="my file">Contact us</a>
 
 
         </nav>
