personal details file
css updateded file

--- a/home.html
+++ b/home.html
@@ -2,11 +2,20 @@
 <html>
     <head>
         <title> Professional Summery </title>
+        <style>
+            h2{
+color:darkblue;
+background-color:goldenrod;
+            }
+
+        </style>
     </head>
     <body>
+        <h2> Career Objectives </h2>
+        To work a oranization where i can learn and grow my skill and help organizational growth
         <h2> Professional Summery </h2>
         <ul>
-            <li> Having 1year of experience in developing single page web Application using Angular
+            <li> Having 1year of experience in developing single page web Application using <span style="color: darkorange;">Angular</span>
             8,HTML 5,CSS3,<br>Bootstrap 5,JavaScript, TypeScript</li><br>
             <li> Experiences on working with version control system-Git and GitHub</li><br>
             <li>  Experiences working with JIRA for user stories and bug tracking </li><br>
