--- a/personal.html
+++ b/personal.html
@@ -2,18 +2,27 @@
 <html>
     <head>
        <title> Profile </title>
+       <style>      
+    .capital,#body  {
+        color:rgb(68,117,19);
+        text-transform: uppercase;
+            font-size: large;
+
+        }
+       </style>
+       
     </head>
     <body>
-        <strong> Profile Photo</strong><br>
+        <strong class="capital"> Profile Photo</strong><br>
         <img src="developer.png"><br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Toufik Khatik <br>
-        <strong> Mobile Number:</strong> &nbsp;9970926525<br>
-        <strong> Email:</strong>&nbsp;toufikkhatik19@gmail.com<br>
-        <strong> Date of Birth:</strong>&nbsp;Sept-19-1984<br>
-        <strong> Address:</strong>&nbsp;Kacheri Road, Sangola<br>
+        <strong class="capital"> Mobile Number:</strong> &nbsp;9970926525<br>
+        <strong class="capital"> Email:</strong>&nbsp;toufikkhatik19@gmail.com<br>
+        <strong class="capital"> Date of Birth:</strong>&nbsp;Sept-19-1984<br>
+        <strong class="capital"> Address:</strong>&nbsp;Kacheri Road, Sangola<br>
         <br>
         <details>
-            <summary> Family Details: </summary>
+            <summary id="body" fount="large"> Family Details: </summary>
         </details>        
         <ul>        
         <li>Father Name: Razzak Khatik </li>
