--- a/home.html
+++ b/home.html
@@ -1,30 +1,54 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title> Professional Summery </title>
-        <style>
-            h2{
-color:darkblue;
-background-color:goldenrod;
-            }
+  <head>
+    <title>Professional Summery</title>
+     <link href="hhtp://founts.googleapis.com/css2?family=Josefin+Sans:wght@600isplay=swap"
+     rel="stylesheet"/>
+    <style>
+      body {
+        font-family: 'Roboto', sans-serif;
 
-        </style>
-    </head>
-    <body>
-        <h2> Career Objectives </h2>
-        To work a oranization where i can learn and grow my skill and help organizational growth
-        <h2> Professional Summery </h2>
-        <ul>
-            <li> Having 1year of experience in developing single page web Application using <span style="color: darkorange;">Angular</span>
-            8,HTML 5,CSS3,<br>Bootstrap 5,JavaScript, TypeScript</li><br>
-            <li> Experiences on working with version control system-Git and GitHub</li><br>
-            <li>  Experiences working with JIRA for user stories and bug tracking </li><br>
-            <li> Strong Debugging and Troubleshooting code experience using Chrome Developer Tool</li><br>
-            <li> Working exposure on ID's like VS Code and Notepad++</li><br>
-            <li> Good working experience under Agile methodologies environment</li><br>
-            <li> Experience in using Crome Deveioper Tool for debugging and troubleshooting the code </li><br>
-            <li> Knowledge of NodeJS</li><br>
-            <li> Ability to work with people at all levels in program </li><br>
-        </ul>
-    </body>
+      }
+      h2 {
+        color: darkblue;
+        background-color: goldenrod;
+      }
+    </style>
+  </head>
+  <body>
+    <h2 style="color: brown" >Career Objectives</h2>
+    To work a oranization where i can learn and grow my skill and help
+    organizational growth
+    <h2 style="color: brown">Professional Summery</h2>
+    <ul>
+      <li>
+        Having 1year of experience in developing single page web Application
+        using <span style="color: darkorange">Angular</span> 8,HTML 5,CSS3,<br />Bootstrap
+        5,JavaScript, TypeScript
+      </li>
+      <br />
+      <li>Experiences on working with version control system-Git and GitHub</li>
+      <br />
+      <li>Experiences working with JIRA for user stories and bug tracking</li>
+      <br />
+      <li>
+        Strong Debugging and Troubleshooting code experience using Chrome
+        Developer Tool
+      </li>
+      <br />
+      <li>Working exposure on ID's like VS Code and Notepad++</li>
+      <br />
+      <li>Good working experience under Agile methodologies environment</li>
+      <br />
+      <li>
+        Experience in using Crome Deveioper Tool for debugging and
+        troubleshooting the code
+      </li>
+      <br />
+      <li>Knowledge of NodeJS</li>
+      <br />
+      <li>Ability to work with people at all levels in program</li>
+      <br />
+    </ul>
+  </body>
 </html>
